@@ -1,10 +1,12 @@
 package com.budlords.gui;
 
 import com.budlords.BudLords;
+import com.budlords.quality.StarRating;
 import com.budlords.strain.Strain;
 import com.budlords.strain.StrainManager;
 import org.bukkit.Bukkit;
 import org.bukkit.Material;
+import org.bukkit.Sound;
 import org.bukkit.entity.Player;
 import org.bukkit.event.EventHandler;
 import org.bukkit.event.Listener;
@@ -30,89 +32,229 @@ public class StrainCreatorGUI implements InventoryHolder, Listener {
         plugin.getServer().getPluginManager().registerEvents(this, plugin);
     }
 
-    // Using deprecated createInventory(InventoryHolder, int, String) for Bukkit/Spigot compatibility
-    // Paper servers can replace with Adventure API's Component-based version
     @SuppressWarnings("deprecation")
     public void open(Player player) {
         StrainBuilder builder = new StrainBuilder();
         activeBuilders.put(player.getUniqueId(), builder);
         
-        Inventory inv = Bukkit.createInventory(this, 54, "§2§lStrain Creator");
+        Inventory inv = Bukkit.createInventory(this, 54, "§2§l✿ Strain Creator ✿");
         updateInventory(inv, builder);
         player.openInventory(inv);
+        player.playSound(player.getLocation(), Sound.BLOCK_NOTE_BLOCK_CHIME, 0.5f, 1.2f);
     }
 
     private void updateInventory(Inventory inv, StrainBuilder builder) {
         inv.clear();
 
-        // Border
-        ItemStack border = createItem(Material.BLACK_STAINED_GLASS_PANE, " ", null);
+        // Modern gradient border
+        ItemStack borderDark = createItem(Material.BLACK_STAINED_GLASS_PANE, " ", null);
+        ItemStack borderGreen = createItem(Material.GREEN_STAINED_GLASS_PANE, " ", null);
+        ItemStack borderLime = createItem(Material.LIME_STAINED_GLASS_PANE, " ", null);
+        
+        // Top border with gradient
         for (int i = 0; i < 9; i++) {
-            inv.setItem(i, border);
-            inv.setItem(45 + i, border);
+            inv.setItem(i, i % 2 == 0 ? borderGreen : borderLime);
         }
+        // Bottom border with gradient
+        for (int i = 45; i < 54; i++) {
+            inv.setItem(i, i % 2 == 0 ? borderGreen : borderLime);
+        }
+        // Side borders
         for (int i = 9; i < 45; i += 9) {
-            inv.setItem(i, border);
-            inv.setItem(i + 8, border);
+            inv.setItem(i, borderDark);
+            inv.setItem(i + 8, borderDark);
         }
 
-        // Name display/edit
+        // Header info
+        ItemStack header = createItem(Material.OAK_SIGN, 
+            "§a§l✿ Create Your Strain ✿",
+            Arrays.asList(
+                "§7Design a unique cannabis strain!",
+                "",
+                "§7Click items to adjust settings",
+                "§7Save when you're satisfied"
+            ));
+        inv.setItem(4, header);
+
+        // Name display/edit - Modern style
         ItemStack nameItem = createItem(Material.NAME_TAG, 
-            "§e§lStrain Name: §f" + builder.name,
-            Arrays.asList("§7Click to rename", "§7Current: §f" + builder.name));
+            "§e§l✎ Name: §f" + builder.name,
+            Arrays.asList(
+                "",
+                "§7Current: §f" + builder.name,
+                "",
+                "§a▶ Click to rename",
+                "§7You'll type the new name in chat",
+                "§7and return here automatically!"
+            ));
         inv.setItem(13, nameItem);
 
-        // Rarity selector
+        // Rarity selector with visual indicator
         ItemStack rarityItem = createItem(getRarityMaterial(builder.rarity),
-            "§e§lRarity: " + builder.rarity.getDisplayName(),
-            Arrays.asList("§7Click to cycle rarity", "§7Current: " + builder.rarity.getDisplayName()));
+            "§e§l◆ Rarity: " + builder.rarity.getDisplayName(),
+            Arrays.asList(
+                "",
+                getRarityDescription(builder.rarity),
+                "",
+                "§a▶ Click to cycle rarity",
+                "§7" + getRarityOrder(builder.rarity)
+            ));
         inv.setItem(20, rarityItem);
 
-        // Potency controls
-        inv.setItem(21, createItem(Material.RED_DYE, "§c- Potency", List.of("§7Decrease potency")));
+        // Seed star rating selector
+        ItemStack starItem = createItem(Material.NETHER_STAR,
+            "§e§l★ Seed Quality: " + builder.seedStarRating.getDisplay(),
+            Arrays.asList(
+                "",
+                "§7Affects growth and final quality",
+                "§7Better seeds = Better buds!",
+                "",
+                "§a▶ Click to cycle star rating"
+            ));
+        inv.setItem(24, starItem);
+
+        // Potency controls - Enhanced
+        inv.setItem(21, createDecreaseButton("Potency"));
         inv.setItem(22, createItem(Material.BLAZE_POWDER, 
-            "§6§lPotency: §e" + builder.potency + "%",
-            List.of("§7THC strength", "§7Range: 1-100")));
-        inv.setItem(23, createItem(Material.LIME_DYE, "§a+ Potency", List.of("§7Increase potency")));
+            "§6§l⚗ Potency: §e" + builder.potency + "%",
+            Arrays.asList(
+                "",
+                "§7THC strength of the strain",
+                "§7Affects sale value and effects",
+                "",
+                createProgressBar(builder.potency),
+                "§7Range: 1-100"
+            )));
+        inv.setItem(23, createIncreaseButton("Potency"));
 
-        // Yield controls
-        inv.setItem(29, createItem(Material.RED_DYE, "§c- Yield", List.of("§7Decrease yield")));
+        // Yield controls - Enhanced
+        inv.setItem(29, createDecreaseButton("Yield"));
         inv.setItem(30, createItem(Material.WHEAT_SEEDS, 
-            "§6§lYield: §e" + builder.yield + " buds",
-            List.of("§7Number of buds when harvested", "§7Range: 1-20")));
-        inv.setItem(31, createItem(Material.LIME_DYE, "§a+ Yield", List.of("§7Increase yield")));
+            "§6§l🌿 Yield: §e" + builder.yield + " buds",
+            Arrays.asList(
+                "",
+                "§7Buds harvested per plant",
+                "§7More buds = More profit!",
+                "",
+                createYieldDisplay(builder.yield),
+                "§7Range: 1-20"
+            )));
+        inv.setItem(31, createIncreaseButton("Yield"));
 
-        // Quality controls
-        inv.setItem(37, createItem(Material.RED_DYE, "§c- Quality", List.of("§7Decrease packaging quality")));
+        // Quality controls - Enhanced
+        inv.setItem(37, createDecreaseButton("Quality"));
         inv.setItem(38, createItem(Material.DIAMOND, 
-            "§6§lPackaging Quality: §e" + builder.packagingQuality + "%",
-            List.of("§7Affects final sale value", "§7Range: 1-100")));
-        inv.setItem(39, createItem(Material.LIME_DYE, "§a+ Quality", List.of("§7Increase packaging quality")));
+            "§6§l💎 Packaging Quality: §e" + builder.packagingQuality + "%",
+            Arrays.asList(
+                "",
+                "§7Quality of packaged product",
+                "§7Affects final sale value",
+                "",
+                createProgressBar(builder.packagingQuality),
+                "§7Range: 1-100"
+            )));
+        inv.setItem(39, createIncreaseButton("Quality"));
 
-        // Icon selector area (slots 24-26, 33-35, 42-44)
-        ItemStack iconLabel = createItem(Material.PAINTING, "§e§lDrag Icon Here", 
-            List.of("§7Place an item to use as icon", "§7Current: " + builder.iconMaterial.name()));
-        inv.setItem(25, iconLabel);
+        // Icon selector area
+        inv.setItem(25, createItem(Material.PAINTING, "§e§l🎨 Custom Icon", 
+            Arrays.asList(
+                "",
+                "§7Drag an item here to set icon",
+                "§7Current: §f" + builder.iconMaterial.name()
+            )));
         
         // Current icon display
-        inv.setItem(34, createItem(builder.iconMaterial, "§aCurrent Icon", 
-            List.of("§7" + builder.iconMaterial.name())));
+        inv.setItem(34, createItem(builder.iconMaterial, "§a✓ Current Icon", 
+            Arrays.asList("§7" + builder.iconMaterial.name(), "", "§7Drop item here to change")));
 
-        // Save button
-        ItemStack saveBtn = createItem(Material.EMERALD_BLOCK, "§a§lSAVE STRAIN",
+        // Preview area
+        ItemStack preview = createItem(builder.iconMaterial,
+            builder.rarity.getDisplayName() + " " + builder.name,
             Arrays.asList(
-                "§7Click to save and register",
+                "§8━━━━━━━━━━━━━━━━━━━━",
+                "§7Potency: §e" + builder.potency + "%",
+                "§7Yield: §e" + builder.yield + " buds",
+                "§7Quality: §e" + builder.packagingQuality + "%",
+                "§7Seed: " + builder.seedStarRating.getDisplay(),
+                "§8━━━━━━━━━━━━━━━━━━━━",
                 "",
+                "§7This is a preview of your strain!"
+            ));
+        inv.setItem(43, preview);
+
+        // Save button - Modern with animation hint
+        ItemStack saveBtn = createItem(Material.EMERALD_BLOCK, "§a§l✓ SAVE & CREATE",
+            Arrays.asList(
+                "",
+                "§7━━━━ Strain Summary ━━━━",
                 "§7Name: §f" + builder.name,
                 "§7Rarity: " + builder.rarity.getDisplayName(),
                 "§7Potency: §e" + builder.potency + "%",
-                "§7Yield: §e" + builder.yield,
-                "§7Quality: §e" + builder.packagingQuality + "%"
+                "§7Yield: §e" + builder.yield + " buds",
+                "§7Quality: §e" + builder.packagingQuality + "%",
+                "§7Seed: " + builder.seedStarRating.getDisplay(),
+                "",
+                "§a▶ Click to create strain!",
+                "§7You'll receive 5 seeds"
             ));
         inv.setItem(49, saveBtn);
 
         // Cancel button
-        inv.setItem(45, createItem(Material.BARRIER, "§c§lCANCEL", List.of("§7Close without saving")));
+        inv.setItem(45, createItem(Material.BARRIER, "§c§l✗ CANCEL", 
+            Arrays.asList("", "§7Close without saving", "§7Progress will be lost!")));
+    }
+    
+    private String createProgressBar(int value) {
+        StringBuilder bar = new StringBuilder("§8[");
+        int filled = value / 10;
+        for (int i = 0; i < 10; i++) {
+            if (i < filled) {
+                bar.append("§a█");
+            } else {
+                bar.append("§7░");
+            }
+        }
+        bar.append("§8]");
+        return bar.toString();
+    }
+    
+    private String createYieldDisplay(int yield) {
+        StringBuilder display = new StringBuilder();
+        for (int i = 0; i < Math.min(yield, 10); i++) {
+            display.append("§a✿");
+        }
+        if (yield > 10) {
+            display.append(" §7+").append(yield - 10);
+        }
+        return display.toString();
+    }
+    
+    private ItemStack createDecreaseButton(String type) {
+        return createItem(Material.RED_CONCRETE, "§c§l◀ -5 " + type, 
+            Arrays.asList("", "§7Click to decrease", "§7Shift-click: -10"));
+    }
+    
+    private ItemStack createIncreaseButton(String type) {
+        return createItem(Material.LIME_CONCRETE, "§a§l+5 " + type + " ▶", 
+            Arrays.asList("", "§7Click to increase", "§7Shift-click: +10"));
+    }
+    
+    private String getRarityDescription(Strain.Rarity rarity) {
+        return switch (rarity) {
+            case COMMON -> "§7Basic strain, easy to sell";
+            case UNCOMMON -> "§aSlightly better quality";
+            case RARE -> "§9High demand, better prices";
+            case LEGENDARY -> "§6Premium quality, max value!";
+        };
+    }
+    
+    private String getRarityOrder(Strain.Rarity rarity) {
+        return switch (rarity) {
+            case COMMON -> "Common → Uncommon → Rare → Legendary";
+            case UNCOMMON -> "Common ← Uncommon → Rare → Legendary";
+            case RARE -> "Common ← Uncommon ← Rare → Legendary";
+            case LEGENDARY -> "Common ← Uncommon ← Rare ← Legendary";
+        };
     }
 
     private Material getRarityMaterial(Strain.Rarity rarity) {
@@ -146,12 +288,15 @@ public class StrainCreatorGUI implements InventoryHolder, Listener {
         if (builder == null) return;
 
         int slot = event.getRawSlot();
+        boolean shift = event.isShiftClick();
+        int amount = shift ? 10 : 5;
         
-        // Allow placing items in icon area (slots 24-26, 33-35, 42-44)
+        // Allow placing items in icon area
         if (slot == 34 && event.getCursor() != null && event.getCursor().getType() != Material.AIR) {
             builder.iconMaterial = event.getCursor().getType();
             event.setCancelled(true);
             updateInventory(event.getInventory(), builder);
+            player.playSound(player.getLocation(), Sound.BLOCK_NOTE_BLOCK_BELL, 0.3f, 1.5f);
             return;
         }
 
@@ -160,43 +305,60 @@ public class StrainCreatorGUI implements InventoryHolder, Listener {
         switch (slot) {
             case 13 -> { // Name
                 player.closeInventory();
-                player.sendMessage("§eType the new strain name in chat:");
+                player.sendMessage("");
+                player.sendMessage("§a§l✎ §eType the new strain name in chat:");
+                player.sendMessage("§7(The name will be set and you'll return to the GUI)");
+                player.sendMessage("");
                 builder.awaitingName = true;
                 
-                // Re-open after delay with chat listener
+                // Register chat listener
                 plugin.getServer().getPluginManager().registerEvents(new ChatListener(plugin, player, builder, this), plugin);
             }
             case 20 -> { // Rarity
                 builder.rarity = builder.rarity.next();
                 updateInventory(event.getInventory(), builder);
+                player.playSound(player.getLocation(), Sound.BLOCK_NOTE_BLOCK_PLING, 0.3f, 1.0f + (builder.rarity.ordinal() * 0.2f));
+            }
+            case 24 -> { // Seed star rating
+                int currentStars = builder.seedStarRating.getStars();
+                builder.seedStarRating = StarRating.fromValue((currentStars % 5) + 1);
+                updateInventory(event.getInventory(), builder);
+                player.playSound(player.getLocation(), Sound.BLOCK_NOTE_BLOCK_CHIME, 0.4f, 0.8f + (builder.seedStarRating.getStars() * 0.15f));
             }
             case 21 -> { // Potency -
-                builder.potency = Math.max(1, builder.potency - 5);
+                builder.potency = Math.max(1, builder.potency - amount);
                 updateInventory(event.getInventory(), builder);
+                player.playSound(player.getLocation(), Sound.BLOCK_NOTE_BLOCK_BASS, 0.3f, 0.8f);
             }
             case 23 -> { // Potency +
-                builder.potency = Math.min(100, builder.potency + 5);
+                builder.potency = Math.min(100, builder.potency + amount);
                 updateInventory(event.getInventory(), builder);
+                player.playSound(player.getLocation(), Sound.BLOCK_NOTE_BLOCK_BASS, 0.3f, 1.2f);
             }
             case 29 -> { // Yield -
-                builder.yield = Math.max(1, builder.yield - 1);
+                builder.yield = Math.max(1, builder.yield - (shift ? 2 : 1));
                 updateInventory(event.getInventory(), builder);
+                player.playSound(player.getLocation(), Sound.BLOCK_NOTE_BLOCK_BASS, 0.3f, 0.8f);
             }
             case 31 -> { // Yield +
-                builder.yield = Math.min(20, builder.yield + 1);
+                builder.yield = Math.min(20, builder.yield + (shift ? 2 : 1));
                 updateInventory(event.getInventory(), builder);
+                player.playSound(player.getLocation(), Sound.BLOCK_NOTE_BLOCK_BASS, 0.3f, 1.2f);
             }
             case 37 -> { // Quality -
-                builder.packagingQuality = Math.max(1, builder.packagingQuality - 5);
+                builder.packagingQuality = Math.max(1, builder.packagingQuality - amount);
                 updateInventory(event.getInventory(), builder);
+                player.playSound(player.getLocation(), Sound.BLOCK_NOTE_BLOCK_BASS, 0.3f, 0.8f);
             }
             case 39 -> { // Quality +
-                builder.packagingQuality = Math.min(100, builder.packagingQuality + 5);
+                builder.packagingQuality = Math.min(100, builder.packagingQuality + amount);
                 updateInventory(event.getInventory(), builder);
+                player.playSound(player.getLocation(), Sound.BLOCK_NOTE_BLOCK_BASS, 0.3f, 1.2f);
             }
             case 45 -> { // Cancel
                 player.closeInventory();
-                player.sendMessage("§cStrain creation cancelled.");
+                player.sendMessage("§c✗ Strain creation cancelled.");
+                player.playSound(player.getLocation(), Sound.BLOCK_NOTE_BLOCK_BASS, 0.5f, 0.5f);
             }
             case 49 -> { // Save
                 saveStrain(player, builder);
@@ -220,25 +382,36 @@ public class StrainCreatorGUI implements InventoryHolder, Listener {
         strainManager.registerStrain(strain);
         strainManager.saveStrains();
         
-        // Give player some seeds
-        ItemStack seeds = strainManager.createSeedItem(strain, 5);
+        // Give player seeds with selected star rating
+        ItemStack seeds = strainManager.createSeedItem(strain, 5, builder.seedStarRating);
         player.getInventory().addItem(seeds);
         
         player.closeInventory();
+        
+        // Success effects
+        player.playSound(player.getLocation(), Sound.UI_TOAST_CHALLENGE_COMPLETE, 0.7f, 1.0f);
+        
+        player.sendMessage("");
         player.sendMessage("§a§l✓ Strain Created Successfully!");
+        player.sendMessage("§8━━━━━━━━━━━━━━━━━━━━━━━━━━━━");
         player.sendMessage("§7Name: §f" + strain.getName());
-        player.sendMessage("§7ID: §f" + strain.getId());
-        player.sendMessage("§7You received §e5 seeds§7 to get started!");
+        player.sendMessage("§7ID: §8" + strain.getId());
+        player.sendMessage("§7Rarity: " + strain.getRarity().getDisplayName());
+        player.sendMessage("§7Seeds: " + builder.seedStarRating.getDisplay());
+        player.sendMessage("");
+        player.sendMessage("§eYou received §a5 seeds §eto get started!");
+        player.sendMessage("§8━━━━━━━━━━━━━━━━━━━━━━━━━━━━");
+        player.sendMessage("");
     }
 
-    // Using deprecated createInventory for Bukkit/Spigot compatibility
     @SuppressWarnings("deprecation")
     public void reopenForPlayer(Player player) {
         StrainBuilder builder = activeBuilders.get(player.getUniqueId());
         if (builder != null) {
-            Inventory inv = Bukkit.createInventory(this, 54, "§2§lStrain Creator");
+            Inventory inv = Bukkit.createInventory(this, 54, "§2§l✿ Strain Creator ✿");
             updateInventory(inv, builder);
             player.openInventory(inv);
+            player.playSound(player.getLocation(), Sound.BLOCK_NOTE_BLOCK_CHIME, 0.3f, 1.0f);
         }
     }
 
@@ -265,6 +438,7 @@ public class StrainCreatorGUI implements InventoryHolder, Listener {
         int yield = 3;
         int packagingQuality = 50;
         Material iconMaterial = Material.GREEN_DYE;
+        StarRating seedStarRating = StarRating.ONE_STAR;
         boolean awaitingName = false;
     }
 
